# Armadillo-Matrix-Lec-1

./: CMakeLists.txt  README.md
Armadillo Matrix Lec 1/: Armadillo Matrix Lec 1.cpp  Armadillo Matrix Lec 1.h  CMakeLists.txt
